actually implemented parameters; fixed layout issue

--- a/saltgui/static/stylesheets/main.css
+++ b/saltgui/static/stylesheets/main.css
@@ -159,9 +159,14 @@ h1 {
   margin-bottom: 20px;
 }
 
+#login-form input,
+#login-form select {
+  display: block;
+}
+
 input,
 select {
-  display: block;
+  display: inline-block;
   padding: 7px 10px;
   margin-bottom: 15px;
   border-radius: 2px;
